decompiler/tests/snapshots/test_tool__x86_64_callconv__func032.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
func032 0x40119c+8 (file 0x119c)
          40119c: 48 89 c8                mov rax,rcx
          40119f: 48 c1 e8 20             shr rax,20h
          4011a3: c3                      ret

function type: "func032" func (arg0 small <TypeID(784v1)>,
                               arg1 small <TypeID(784v1)>) uint8_t <TypeID(788v1)>
0 warnings.


mil program = 
program  88 instrs
                 0 r12 <- Ancestral(AncestralName("stack_bottom"))
                 1 r2 <- Ancestral(AncestralName("CF"))
                 2 r3 <- Ancestral(AncestralName("PF"))
                 3 r4 <- Ancestral(AncestralName("AF"))
                 4 r5 <- Ancestral(AncestralName("ZF"))
                 5 r6 <- Ancestral(AncestralName("SF"))
                 6 r7 <- Ancestral(AncestralName("TF"))
                 7 r8 <- Ancestral(AncestralName("IF"))
                 8 r9 <- Ancestral(AncestralName("DF"))
                 9 r10 <- Ancestral(AncestralName("OF"))
                10 r11 <- Ancestral(AncestralName("RBP"))
                11 r12 <- Ancestral(AncestralName("RSP"))
                12 r13 <- Ancestral(AncestralName("RIP"))
                13 r14 <- Ancestral(AncestralName("RDI"))
                14 r15 <- Ancestral(AncestralName("RSI"))
                15 r16 <- Ancestral(AncestralName("RAX"))
                16 r17 <- Ancestral(AncestralName("RBX"))
                17 r18 <- Ancestral(AncestralName("RCX"))
                18 r19 <- Ancestral(AncestralName("RDX"))
                19 r20 <- Ancestral(AncestralName("R8"))
                20 r21 <- Ancestral(AncestralName("R9"))
                21 r22 <- Ancestral(AncestralName("R10"))
                22 r23 <- Ancestral(AncestralName("R11"))
                23 r24 <- Ancestral(AncestralName("R12"))
                24 r25 <- Ancestral(AncestralName("R13"))
                25 r26 <- Ancestral(AncestralName("R14"))
                26 r27 <- Ancestral(AncestralName("R15"))
                27 r28 <- Ancestral(AncestralName("ZMM0"))
                28 r29 <- Ancestral(AncestralName("ZMM1"))
                29 r30 <- Ancestral(AncestralName("ZMM2"))
                30 r31 <- Ancestral(AncestralName("ZMM3"))
                31 r32 <- Ancestral(AncestralName("ZMM4"))
                32 r33 <- Ancestral(AncestralName("ZMM5"))
                33 r34 <- Ancestral(AncestralName("ZMM6"))
                34 r35 <- Ancestral(AncestralName("ZMM7"))
                35 r36 <- Ancestral(AncestralName("ZMM8"))
                36 r37 <- Ancestral(AncestralName("ZMM9"))
                37 r38 <- Ancestral(AncestralName("ZMM10"))
                38 r39 <- Ancestral(AncestralName("ZMM11"))
                39 r40 <- Ancestral(AncestralName("ZMM12"))
                40 r41 <- Ancestral(AncestralName("ZMM13"))
                41 r42 <- Ancestral(AncestralName("ZMM14"))
                42 r43 <- Ancestral(AncestralName("ZMM15"))
                43 r45 <- Undefined
                44 r46 <- Undefined
                45 r47 <- Undefined
                46 r48 <- Undefined
                47 r49 <- Undefined
                48 r50 <- Undefined
                49 r51 <- Undefined
                50 r52 <- Undefined
                51 r53 <- Undefined
                52 r54 <- Undefined
                53 r55 <- Undefined
                54 r56 <- Undefined
                55 r57 <- Undefined
                56 r58 <- Undefined
                57 r59 <- Undefined
                58 r60 <- Undefined
                59 r61 <- Undefined
                60 r62 <- Undefined
                61 r63 <- Undefined
                62 r64 <- Undefined
                63 r65 <- Undefined
                64 r45 <- Ancestral(AncestralName("arg0"))
                65 r46 <- Part { src: r45, offset: 0, size: 8 }
                66 r14 <- Get(r46)
                67 r47 <- Part { src: r45, offset: 8, size: 8 }
                68 r15 <- Get(r47)
                69 r48 <- Ancestral(AncestralName("arg1"))
                70 r49 <- Part { src: r48, offset: 0, size: 8 }
                71 r19 <- Get(r49)
                72 r50 <- Part { src: r48, offset: 8, size: 8 }
                73 r18 <- Get(r50)
0x40119c:
                74 r16 <- Get(r18)
0x40119f:
                75 r46 <- Const { value: 32, size: 1 }
                76 r46 <- Widen { reg: r46, target_size: 8, sign: false }
                77 r16 <- Arith(Shr, r16, r46)
                78 r16 <- Get(r16)
                79 r6 <- SignOf(r16)
                80 r5 <- IsZero(r16)
                81 r47 <- Part { src: r16, offset: 0, size: 1 }
                82 r3 <- Parity(r47)
0x4011a3:
                83 r45 <- Void
                84 r45 <- Concat { lo: r45, hi: r16 }
                85 r45 <- Part { src: r45, offset: 0, size: 1 }
                86 r47 <- SetReturnValue(r45)
                87 r47 <- Control(Ret)


ssa pre-xform:
ssa program  88 instrs
.B0:    ;;  → Always(Return).
         r69 <- Ancestral(AncestralName("arg1"))
         r72 <- Part { src: r69, offset: 8, size: 8 }
         r75 <- Const { value: 32, size: 1 }
         r76 <- Widen { reg: r75, target_size: 8, sign: false }
         r77 <- Arith(Shr, r72, r76)
         r84 <- Concat { lo: r83, hi: r77 }
         r85 <- Part { src: r84, offset: 0, size: 1 }
         r86 <- SetReturnValue(r85)


cfg:
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r69, r72, r75, r76, r77, r83, r84, r85, r86]
  domtree:
    BlockID(0)

ssa post-xform:
ssa program  88 instrs
.B0:    ;;  → Always(Return).
         r69 <- Ancestral(AncestralName("arg1"))
         r72 <- Part { src: r69, offset: 8, size: 8 }
         r75 <- Const { value: 32, size: 1 }
         r76 <- Widen { reg: r75, target_size: 8, sign: false }
         r77 <- Arith(Shr, r72, r76)
         r85 <- Part { src: r77, offset: 0, size: 1 }
         r86 <- SetReturnValue(r85)



T0: {
  ;
  return (pre:arg1[16 .. 8] >> 32 as u64)[1 .. 0]
}
